--- a/assets/header.scss
+++ b/assets/header.scss
@@ -4,6 +4,7 @@
         align-items: center;
         margin-top: 50px;
         justify-content: space-between;
+        width: 100%;
     }   
     
     &_logo {
