--- a/assets/main.css
+++ b/assets/main.css
@@ -62,40 +62,15 @@ body {
 .modal_register:hover a {
   text-decoration: underline;
 }
-.modal_login {
-  position: relative;
-  margin: 0 auto;
-  border-radius: 5px;
-  background-color: var(--bg-color);
-  width: 70%;
-  height: 80%;
-  display: none;
-  flex-direction: column;
-  animation: fadeIn linear 0.3s;
-}
-.modal_login i {
-  position: absolute;
-  top: 0;
-  right: 0;
-  text-align: right;
-  padding: 15px 25px;
-  font-size: 2.5rem;
-  color: var(--text-color);
-  cursor: pointer;
-}
-.modal_login i:hover {
-  font-size: 3rem;
-  opacity: 0.8;
-}
 .modal_register {
-  position: relative;
   margin: 0 auto;
   border-radius: 5px;
   background-color: var(--bg-color);
   width: 70%;
-  height: 100%;
+  min-height: 100%;
   display: none;
   flex-direction: column;
+  position: relative;
   animation: fadeIn linear 0.3s;
 }
 .modal_register i {
@@ -124,16 +99,8 @@ body {
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 100%;
   align-items: center;
   position: relative;
-}
-
-.form_login {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  align-items: center;
 }
 
 .form_group.invalid .form-message {
@@ -174,6 +141,18 @@ body {
   text-decoration: underline;
 }
 
+.form_suggest {
+  margin: 10px auto 0 auto;
+  font-size: 1.5rem;
+  line-height: 30px;
+  font-weight: 500;
+  color: var(--text-color);
+}
+.form_suggest a {
+  text-decoration: none;
+  color: var(--primary-color);
+}
+
 .form-submit {
   width: 60%;
   padding: 15px 10px;
@@ -184,10 +163,10 @@ body {
   background-color: #F53838;
   box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.3);
   color: #fff;
-  margin-top: 10px;
+  margin: 0 auto 0 auto;
   cursor: pointer;
   position: absolute;
-  bottom: 50px;
+  bottom: -80px;
 }
 .form-submit:hover {
   opacity: 0.8;
@@ -256,20 +235,22 @@ body {
   text-align: center;
 }
 .header_login {
-  margin-right: 50px;
+  width: 100%;
+  margin: 0 20px;
   font-size: 16px;
   font-weight: 600;
   line-height: 19px;
   color: var(--text-color);
 }
 .header_register {
+  width: 100%;
   font-size: 16px;
   font-weight: 500;
   line-height: 19px;
   color: #F53855;
   border: 1px solid #F53855;
   border-radius: 50px;
-  padding: 13px 45px;
+  padding: 13px 20px;
   transition: all linear 0.2s;
 }
 .header_register:hover {
@@ -352,6 +333,9 @@ body {
   font-weight: 400;
   color: #4f5665;
 }
+.count_img-item {
+  width: 100%;
+}
 
 .features_group {
   margin-top: 50px;
@@ -400,7 +384,7 @@ body {
 }
 .plan_header {
   margin-top: 100px;
-  width: 44%;
+  width: 100%;
   text-align: center;
   margin-top: 50px;
 }
@@ -527,7 +511,7 @@ body {
   font-weight: 400;
   color: #4f5665;
   margin: 0 auto 120px auto;
-  width: 45%;
+  width: 40%;
 }
 .plan_global_desc span {
   font-weight: 600;
@@ -676,7 +660,7 @@ body {
   margin-top: 50px;
 }
 .footer_contact-container {
-  width: 55%;
+  width: 60%;
 }
 .footer_contact-desc {
   margin: 20px 0 30px 0;
@@ -740,6 +724,147 @@ body {
   font-weight: 500;
   font-size: 18px;
   line-height: 30px;
+}
+
+/* =====PC====== */
+/* =====Tablet========== */
+@media (min-width: 46.25em) and (max-width: 64em) {
+  .started_content {
+    margin-bottom: 50px;
+  }
+
+  .features_content {
+    margin-top: 40px;
+  }
+
+  .plan_choose-item {
+    margin-bottom: 40px;
+  }
+  .plan_choose-cover {
+    width: 50%;
+  }
+  .plan_global_heading {
+    width: 70%;
+  }
+  .plan_global_desc {
+    width: 70%;
+  }
+  .plan_global_map img {
+    width: 90vw;
+  }
+  .plan_global_sponsor img {
+    width: 90vw;
+  }
+  .plan .customer_heading {
+    width: 70%;
+  }
+  .plan .customer_desc {
+    width: 70%;
+  }
+  .plan .customer_block {
+    margin-bottom: 20px;
+  }
+
+  .footer_container {
+    flex-direction: column-reverse;
+  }
+
+  .footer_contact-container {
+    width: 100%;
+    margin-top: 40px;
+  }
+
+  .modal_register {
+    width: 80%;
+  }
+}
+/* ======Mobile====== */
+@media (max-width: 46.1875em) {
+  .header_login {
+    margin: 0 5px;
+  }
+
+  .started_content {
+    margin-bottom: 50px;
+  }
+
+  .started_content {
+    text-align: center;
+  }
+
+  .started_img img {
+    width: 100vw;
+  }
+
+  .count_container {
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+  .count_item {
+    margin: 20px 0;
+  }
+
+  .features_img img {
+    width: 100vw;
+    margin-bottom: 40px;
+  }
+
+  .plan_header {
+    width: 70%;
+  }
+  .plan_choose-item {
+    margin-bottom: 40px;
+  }
+  .plan_choose-cover {
+    width: 70%;
+  }
+  .plan_global_heading {
+    width: 70%;
+  }
+  .plan_global_desc {
+    width: 70%;
+  }
+  .plan_global_map img {
+    width: 90vw;
+  }
+  .plan_global_sponsor img {
+    width: 90vw;
+  }
+
+  .customer_heading {
+    width: 70%;
+  }
+
+  .customer_desc {
+    width: 70%;
+  }
+
+  .customer_block {
+    margin-bottom: 20px;
+  }
+
+  .footer_container {
+    flex-direction: column-reverse;
+  }
+
+  .footer_contact {
+    margin: 0 20px;
+  }
+  .footer_contact-container {
+    width: 100%;
+    margin: 40px auto 0 auto;
+  }
+
+  .footer_product-container {
+    max-width: 90%;
+    margin: 10px 20px;
+  }
+
+  .modal_register {
+    width: 100%;
+  }
 }
 
 /*# sourceMappingURL=main.css.map */
