--- a/assets/modal.scss
+++ b/assets/modal.scss
@@ -27,31 +27,31 @@
             text-decoration: underline;
         }
     }
-    &_login {
-        & i {
-            position: absolute;
-            top: 0;
-            right: 0;
-            text-align: right;
-            padding: 15px 25px;
-            font-size: 2.5rem;
-            color: var(--text-color);
-            cursor: pointer;
-            &:hover {
-                font-size: 3rem;
-                opacity: 0.8;
-            }
-        }
-        position: relative;
-        margin: 0 auto;
-        border-radius: 5px;
-        background-color: var(--bg-color);
-        width: 70%;
-        height: 80%;
-        display: none;
-        flex-direction: column;
-        animation: fadeIn linear 0.3s;
-    }
+    // &_login {
+    //     & i {
+    //         position: absolute;
+    //         top: 0;
+    //         right: 0;
+    //         text-align: right;
+    //         padding: 15px 25px;
+    //         font-size: 2.5rem;
+    //         color: var(--text-color);
+    //         cursor: pointer;
+    //         &:hover {
+    //             font-size: 3rem;
+    //             opacity: 0.8;
+    //         }
+    //     }
+    //     position: relative;
+    //     margin: 0 auto;
+    //     border-radius: 5px;
+    //     background-color: var(--bg-color);
+    //     width: 70%;
+    //     height: 80%;
+    //     display: none;
+    //     flex-direction: column;
+    //     animation: fadeIn linear 0.3s;
+    // }
     // &_login.active {
     //     display: flex;
     // }
@@ -71,14 +71,14 @@
                 opacity: 0.8;
             }
         }
-        position: relative;
         margin: 0 auto;
         border-radius: 5px;
         background-color: var(--bg-color);
         width: 70%;
-        height: 100%;
+        min-height: 100%;
         display: none;
         flex-direction: column;
+        position: relative;
         animation: fadeIn linear 0.3s;
     }
     &_register.active {
@@ -93,17 +93,16 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 100%;
     align-items: center;
     position: relative;
 }
 
-.form_login {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    align-items: center;
-}
+// .form_login {
+//     display: flex;
+//     flex-direction: column;
+//     width: 100%;
+//     align-items: center;
+// }
 .form_group.invalid .form-message{
     text-align: left;
     margin-top: -10px;
@@ -139,6 +138,18 @@
     }
 }
 
+.form_suggest {
+    margin: 10px auto 0 auto;
+    font-size: 1.5rem;
+    line-height: 30px;
+    font-weight: 500;
+    color: var(--text-color);
+    & a {
+        text-decoration: none;
+        color: var(--primary-color);
+    }
+}
+
 .form-submit {
     width:60%;
     padding: 15px 10px;
@@ -149,13 +160,13 @@
     background-color: #F53838;
     box-shadow: 2px 2px 3px rgba($color: #000000, $alpha: 0.3);
     color: #fff;
-    margin-top: 10px;
+    margin: 0 auto 0 auto;
     cursor: pointer;
     &:hover {
         opacity: 0.8;
     }
     position: absolute;
-    bottom: 50px;
+    bottom: -80px;
 }
 
 
