--- a/assets/main.css
+++ b/assets/main.css
@@ -848,7 +848,7 @@ ul {
     align-items: center;
     text-align: center;
     transform: translateX(100%);
-    transition: all linear 0.5s;
+    animation: all ease-in 0.5s;
   }
 
   .header_menu-mobile.show {
@@ -870,12 +870,9 @@ ul {
     margin-bottom: 30px;
     border-bottom: 2px solid #fff;
     width: 50%;
-    line-height: 30px;
-    font-size: 1.5rem;
+    line-height: 50px;
+    font-size: 2rem;
     cursor: pointer;
-  }
-  .header_item-mobile:hover {
-    opacity: 0.8;
   }
 
   .header_btn-mobile {
@@ -883,17 +880,17 @@ ul {
   }
 
   .header_login-mobile {
-    font-size: 1.5rem;
+    font-size: 2.5rem;
     color: #fff;
     margin-right: 10px;
     cursor: pointer;
     padding-right: 10px;
-    border-right: 1px solid #ddd;
+    border-right: 1px solid #eee;
   }
 
   .header_register-mobile {
     color: #fff;
-    font-size: 1.5rem;
+    font-size: 2.5rem;
     cursor: pointer;
   }
 
