--- a/assets/responsive.scss
+++ b/assets/responsive.scss
@@ -117,6 +117,7 @@
         text-align: center;
         transform: translateX(100%);
         animation: all ease-in 0.5s;
+        box-shadow: 10px 0 6px rgba($color: #000000, $alpha: 0.3);
     }
     .header_menu-mobile.show {
         display: flex;
@@ -136,7 +137,7 @@
         border-bottom: 2px solid #fff;
         width: 50%;
         line-height: 50px;
-        font-size: 2rem;
+        font-size: 2.5rem;
         cursor: pointer;
     }
     .header_btn-mobile {
@@ -144,6 +145,8 @@
     }
     .header_login-mobile {
         font-size: 2.5rem;
+        line-height: 50px;
+        font-weight: 500;
         color: #fff;
         margin-right: 10px;
         cursor: pointer;
@@ -154,6 +157,8 @@
     .header_register-mobile {
         color: #fff;
         font-size: 2.5rem;
+        line-height: 50px;
+        font-weight: 500;
         cursor: pointer;
     }
 
@@ -242,6 +247,7 @@
     .modal {
         &_register {
             width: 100%;
+            height: 100%;
         }
         &_heading {
             font-size: 2rem;
