--- a/assets/responsive.scss
+++ b/assets/responsive.scss
@@ -97,8 +97,8 @@
         display: none;
     }
     .header_menu-btn {
-        font-size: 3.5rem;
-        padding: 0 0 5px 5px;
+        font-size: 3rem;
+        padding: 0 0 5px 15px;
         margin-right: 10px;
         cursor: pointer;
         position: relative;
@@ -118,6 +118,13 @@
         transform: translateX(100%);
         animation: all ease-in 0.5s;
         box-shadow: 10px 0 6px rgba($color: #000000, $alpha: 0.3);
+        & i {
+            position: absolute;
+            left: 0;
+            top: 0;
+            padding: 15px;
+            font-size: 3.5rem;
+        }
     }
     .header_menu-mobile.show {
         display: flex;
